# mlops-practical

./: Dockerfile  README.md  airflow.cfg  airflow.db  data.py  main.py  pyproject.toml  simple_auth_manager_passwords.json.generated  train.py
.github/workflows/: ci.yml
dags/: ml_pipeline.py
models/: metrics.json  model_v1.pkl  model_v2.pkl
tests/: test_main.py
